system en chargement async

--- a/services/api/unesemaine/universe-knowledge.z_pos.3_15.json
+++ b/services/api/unesemaine/universe-knowledge.z_pos.3_15.json
@@ -1,90 +1,1 @@
-{
-	"sector": {
-		"pos": "3_15",
-		"capAbsoluteX": 0,
-		"capAbsoluteY": 0,
-		"absoluteWidth": 512,
-		"absoluteHeight": 512,
-		"subElements": {
-			"systems": [{
-				"pos": "3_15_0",
-				"capAbsoluteX": 96,
-				"capAbsoluteY": 64,
-				"absoluteWidth": 64,
-				"absoluteHeight": 64,
-				"image": "\/images\/universe\/system_fg0.jpg",
-				"known": false
-			},
-			{
-				"pos": "3_15_3",
-				"capAbsoluteX": 16,
-				"capAbsoluteY": 16,
-				"absoluteWidth": 64,
-				"absoluteHeight": 64,
-				"image": "\/images\/universe\/system_fg3.jpg",
-				"known": true
-			},
-			{
-				"pos": "3_15_5",
-				"capAbsoluteX": 240,
-				"capAbsoluteY": 0,
-				"absoluteWidth": 64,
-				"absoluteHeight": 64,
-				"image": "\/images\/universe\/system_fg5.jpg",
-				"known": true
-			},
-			{
-				"pos": "3_15_6",
-				"capAbsoluteX": 224,
-				"capAbsoluteY": 64,
-				"absoluteWidth": 64,
-				"absoluteHeight": 64,
-				"image": "\/images\/universe\/system_fg6.jpg",
-				"known": true
-			},
-			{
-				"pos": "3_15_7",
-				"capAbsoluteX": 160,
-				"capAbsoluteY": 144,
-				"absoluteWidth": 64,
-				"absoluteHeight": 64,
-				"image": "\/images\/universe\/system_fg7.jpg",
-				"known": false
-			},
-			{
-				"pos": "3_15_11",
-				"capAbsoluteX": 352,
-				"capAbsoluteY": 32,
-				"absoluteWidth": 64,
-				"absoluteHeight": 64,
-				"image": "\/images\/universe\/system_fg11.jpg",
-				"known": false
-			},
-			{
-				"pos": "3_15_15",
-				"capAbsoluteX": 272,
-				"capAbsoluteY": 160,
-				"absoluteWidth": 64,
-				"absoluteHeight": 64,
-				"image": "\/images\/universe\/system_fg3.jpg",
-				"known": false
-			},
-			{
-				"pos": "3_15_19",
-				"capAbsoluteX": 160,
-				"capAbsoluteY": 16,
-				"absoluteWidth": 64,
-				"absoluteHeight": 64,
-				"image": "\/images\/universe\/system_fg7.jpg",
-				"known": false
-			}]
-		}
-	},
-	"cap": {
-		"minVisiblePosLevel": 3,
-		"absoluteGrid": {
-			"width": 512,
-			"height": 512
-		}
-	}
-}
+{"sector":{"pos":"3_15","capAbsoluteX":0,"capAbsoluteY":0,"absoluteWidth":512,"absoluteHeight":512,"subElements":{"systems":[{"pos":"3_15_0","capAbsoluteX":96,"capAbsoluteY":64,"absoluteWidth":64,"absoluteHeight":64,"image":"\/images\/universe\/system_fg0.jpg","known":false},{"pos":"3_15_3","capAbsoluteX":16,"capAbsoluteY":16,"absoluteWidth":64,"absoluteHeight":64,"image":"\/images\/universe\/system_fg3.jpg","known":true},{"pos":"3_15_5","capAbsoluteX":240,"capAbsoluteY":0,"absoluteWidth":64,"absoluteHeight":64,"image":"\/images\/universe\/system_fg5.jpg","known":true},{"pos":"3_15_6","capAbsoluteX":224,"capAbsoluteY":64,"absoluteWidth":64,"absoluteHeight":64,"image":"\/images\/universe\/system_fg6.jpg","known":true},{"pos":"3_15_7","capAbsoluteX":160,"capAbsoluteY":144,"absoluteWidth":64,"absoluteHeight":64,"image":"\/images\/universe\/system_fg7.jpg","known":false},{"pos":"3_15_11","capAbsoluteX":352,"capAbsoluteY":32,"absoluteWidth":64,"absoluteHeight":64,"image":"\/images\/universe\/system_fg11.jpg","known":false},{"pos":"3_15_15","capAbsoluteX":272,"capAbsoluteY":160,"absoluteWidth":64,"absoluteHeight":64,"image":"\/images\/universe\/system_fg3.jpg","known":false},{"pos":"3_15_19","capAbsoluteX":160,"capAbsoluteY":16,"absoluteWidth":64,"absoluteHeight":64,"image":"\/images\/universe\/system_fg7.jpg","known":false}]}},"cap":{"minVisiblePosLevel":3,"absoluteGrid":{"width":512,"height":512}}}
