--- a/services/api/unesemaine/universe-knowledge.z_pos.3_15_6.json
+++ b/services/api/unesemaine/universe-knowledge.z_pos.3_15_6.json
@@ -1,66 +1,1 @@
-{
-	"system": {
-		"pos": "3_15_6",
-		"capAbsoluteX": 224,
-		"capAbsoluteY": 64,
-		"absoluteWidth": 64,
-		"absoluteHeight": 64,
-		"image": "\/images\/universe\/system_fg6.jpg",
-		"subElements": {
-			"coords": [{
-				"pos": "3_15_6_1",
-				"capAbsoluteX": 224,
-				"capAbsoluteY": 108,
-				"absoluteWidth": 16,
-				"absoluteHeight": 16,
-				"known": true
-			},
-			{
-				"pos": "3_15_6_2",
-				"capAbsoluteX": 248,
-				"capAbsoluteY": 88,
-				"absoluteWidth": 16,
-				"absoluteHeight": 16,
-				"known": true
-			},
-			{
-				"pos": "3_15_6_3",
-				"capAbsoluteX": 232,
-				"capAbsoluteY": 80,
-				"absoluteWidth": 16,
-				"absoluteHeight": 16,
-				"known": true
-			},
-			{
-				"pos": "3_15_6_4",
-				"capAbsoluteX": 272,
-				"capAbsoluteY": 84,
-				"absoluteWidth": 16,
-				"absoluteHeight": 16,
-				"known": true
-			},
-			{
-				"pos": "3_15_6_5",
-				"capAbsoluteX": 244,
-				"capAbsoluteY": 108,
-				"absoluteWidth": 16,
-				"absoluteHeight": 16,
-				"known": true
-			}],
-			"sun": {
-				"capAbsoluteX": 260,
-				"capAbsoluteY": 112,
-				"absoluteWidth": 8,
-				"absoluteHeight": 8,
-				"image": "\/images\/universe\/soleil6\.png"
-			}
-		}
-	},
-	"cap": {
-		"minVisiblePosLevel": 3,
-		"absoluteGrid": {
-			"width": 512,
-			"height": 512
-		}
-	}
-}
+{"system":{"pos":"3_15_6","capAbsoluteX":224,"capAbsoluteY":64,"absoluteWidth":64,"absoluteHeight":64,"subElements":{"coords":[{"pos":"3_15_6_1","capAbsoluteX":224,"capAbsoluteY":108,"absoluteWidth":16,"absoluteHeight":16,"known":true},{"pos":"3_15_6_2","capAbsoluteX":248,"capAbsoluteY":88,"absoluteWidth":16,"absoluteHeight":16,"known":true},{"pos":"3_15_6_3","capAbsoluteX":232,"capAbsoluteY":80,"absoluteWidth":16,"absoluteHeight":16,"known":true},{"pos":"3_15_6_4","capAbsoluteX":272,"capAbsoluteY":84,"absoluteWidth":16,"absoluteHeight":16,"known":true},{"pos":"3_15_6_5","capAbsoluteX":244,"capAbsoluteY":108,"absoluteWidth":16,"absoluteHeight":16,"known":true}],"sun":{"capAbsoluteX":260,"capAbsoluteY":112,"absoluteWidth":8,"absoluteHeight":8,"image":"\/images\/universe\/soleil6.jpg"}}},"cap":{"minVisiblePosLevel":3,"absoluteGrid":{"width":512,"height":512}}}
